--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "recoil": "^0.1.2",
+    "rxjs": "^6.6.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
